--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,31 +6,38 @@
 
   <title>FreshTracks</title>
 
-  <!-- The 1140px Grid -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- The 1140px Grid - http://cssgrid.net/ -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--[if lte IE 9]><link rel="stylesheet" href="stylesheets/ie.css" type="text/css" media="screen" /><![endif]-->
   <link rel="stylesheet" href="stylesheets/1140.css" type="text/css" media="screen" />
-  <!--[if lte IE 9]>
-  <link rel="stylesheet" href="stylesheets/ie.css" type="text/css" media="screen" />
-  <![endif]-->
-  <!-- Type and image presets -->
-  <link rel="stylesheet" href="stylesheets/typeimg.css" type="text/css" media="screen" />
-  <!-- Make minor type adjustments for 1024 monitors -->
-  <link rel="stylesheet" href="stylesheets/smallerscreen.css" media="only screen and (max-width: 1023px)" />
-  <!-- Resets grid for mobile -->
-  <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-width: 767px)" />
+  <link rel="stylesheet" href="stylesheets/styles.css" type="text/css" media="screen" />
 
-  <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.10.custom', 'layout' %>
+  <%= stylesheet_link_tag 'application', 'jquery-ui-1.8.10.custom' %>
   <% # helper methods below are defined in app/helpers/application_helper.rb %>
   <% include_filename = current_action_include_filename(controller) %>
   <%= stylesheet_link_tag include_filename if css_exists?(include_filename) %>
 
-  <%= javascript_include_tag 'ie-html5', 'jquery-1.5.1.min', 'jquery-ui-1.8.10.custom.min.js', 'rails', 'autocomplete-rails', 'application' %>
+  <%= javascript_include_tag 'css3-mediaqueries', 'ie-html5', 'jquery-1.5.1.min', 'jquery-ui-1.8.10.custom.min.js', 'rails', 'autocomplete-rails', 'application' %>
   <%= javascript_include_tag include_filename if js_exists?(include_filename) %>
 
 </head>
 <body>
 <header>
-  <span style="font-size: 60px; color: #C00; font-weight: bold; font-family: ubuntu, helvetica, sans-serif"><br>FreshTracks</span>
+  <div class="container">
+    <div class="row">
+      <div class="eightcol">
+        <h1>FreshTracks</h1>
+        &nbsp;
+      </div>
+      <div class="fourcol last">
+        <% if signed_in? && session[:semester] %>
+          <p>
+            Semester: <%= link_to Semester.find(session[:semester]).name, semesters_path%> | <%= link_to "Sign out", '/sign_out', :method => :delete %> 
+          </p>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </header>
 
 <% if signed_in? %>
@@ -46,12 +53,6 @@
     end
   end
   %>
-
-  <% if signed_in? && session[:semester] %>
-    <div class="right-align">
-    Semester: <%= Semester.find(session[:semester]).name %> (<%= link_to "Change semester", semesters_path%>) | <%= link_to "Sign out", '/sign_out', :method => :delete %> 
-    </div>
-  <% end %>
 <% end %>
 
 <section class="container">
