Shrink text on navbar and remove underline

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -72,8 +72,9 @@ nav ul > li {
 nav ul a {
   color: white;
   font-family: Verdana;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: normal;
+  text-decoration: none;
 }
 
 nav ul a:hover {
