Update semesters part 2 or, how I learned to stop pushing and love rebase

--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -4,8 +4,8 @@
   </div>
 </div>
 <%
-  current_semester = @semesters.select{|s| s.name == "Fall 2009"}.first
-  next_semester = @semesters.select{|s| s.name == "Spring 2010" }.first
+  current_semester = @semesters.select{|s| s.name == "Spring 2011"}.first
+  next_semester = @semesters.select{|s| s.name == "Fall 2011" }.first
 %>
 <div class="row">
   <div class="threecol last">
