--- a/app/views/registered_sections/_schedule.html.erb
+++ b/app/views/registered_sections/_schedule.html.erb
@@ -26,7 +26,7 @@
   <div class="row"<%= ' style="display:none"'.html_safe if section_list.any? %>>
     <div class="twelvecol">
       <h2 type="<%=title%>" class="empty">
-        Your <%= title.downcase %> is currently empty.
+        Your <%= title.downcase %> is empty.
       </h2>
     </div>
   </div>
